# diplom

./: .dockerignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: build_and_deploy.yaml
deploy/: nginx.conf
todolist/: settings.py
todolist/core/: admin.py  models.py
todolist/core/migrations/: 0001_initial.py
todolist/todolist/: settings.py
