[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Wildtsk <wildtsk@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
